--- a/test.yaml
+++ b/test.yaml
@@ -14,3 +14,4 @@ services:
 # docker run -e "ACCEPT_EULA=1" -e "MSSQL_SA_PASSWORD=MyStrongPass123" -e "MSSQL_PID=Developer" -e "MSSQL_USER=SA" -p 1433:1433 -d --name=sql mcr.microsoft.com/azure-sql-edge
 # docker-compose up -d
 # docker-compose down -d
+# docker cp ~/Downloads/AdventureWorks2019.bak a7f51ef5d3ba:/var/opt/mssql/data/
